[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = [
    "shengzhe.li <shengzhe.li@sbintuitions.co.jp>",
    "ryokan.ri <ryokan.ri@sbintuitions.co.jp>",
    "masaya.ohagi <masaya.ohagi@sbintuitions.co.jp>"
]
description = "The evaluation scripts for JMTEB (Japanese Massive Text Embedding Benchmark)"
name = "JMTEB"
packages = [{from = "src", include = "jmteb"}]
readme = "README.md"
version = "1.2.0"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
jsonargparse = {extras = ["jsonnet"], version = "^4.27.5"}
loguru = "^0.7.2"
scikit-learn = "^1.3.2"
transformers = {extras = ["ja", "sentencepiece"], version = "^4.38.1"}
datasets = ">=2.17"
sentence-transformers = "^3.0.0"
pytest = "7.1.3"
torch = "^2.3"
pydantic = "^2.6.3"
eval-type-backport = "^0.1.3"
smart-open = "^7.0.1"
openai = "^1.16.2"
pytest-mock = "^3.14.0"
tiktoken = "^0.6.0"
numpy = "^1.26"
accelerate = "^0.31.0"
tabulate = "^0.9.0"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
isort = "^5.12.0"
mypy = "^1.7.1"
flake8 = "^7.0.0"
tabulate = "^0.9.0"

[tool.black]
line-length = 119

[tool.isort]
profile = "black"